Whoops forgot to save. Not that there is much there yet.

--- a/expression_evaluation/expression_evaluator.html
+++ b/expression_evaluation/expression_evaluator.html
@@ -1,3 +1,11 @@
 <script>
-  alert('hello');
+  var parser = function(expression){
+    additionSubtraction = [];
+    multiplyDivide = [];
+    values = [];
+    
+    return {
+      
+    };
+  };
 </script>
